# reactor-designs

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  nuscale_smr.json  render.yaml
api/: Cargo.toml  Dockerfile  Dockerfile.prod
api/migrations/00000000000001_create_reactor_designs/: down.sql  up.sql
api/migrations/00000000000002_create_simulation_runs/: down.sql  up.sql
api/migrations/00000000000003_create_simulation_results/: down.sql  up.sql
api/migrations/00000000000004_create_waste_isotope_inventory/: down.sql  up.sql
api/migrations/00000000000005_seed_reactor_designs/: down.sql  up.sql
api/src/: kernel.rs  main.rs  models.rs  routes.rs  schema.rs
api/src/handlers/: compare.rs  ingest.rs  mod.rs  modules.rs  reactors.rs  simulations.rs
api/src/services/: mod.rs  pruning.rs
api/src/services/simulation/: engine.rs  fluid.rs  fuel.rs  mod.rs  power.rs  waste.rs
ui/: Dockerfile.prod  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css
ui/src/lib/: api.ts  export-pdf.ts  types.ts
ui/src/lib/components/: TimeSeriesChart.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/compare/: +page.svelte
ui/src/routes/ingest/: +page.svelte
ui/src/routes/modules/[module]/: +page.svelte
ui/src/routes/reactors/: +page.svelte
ui/src/routes/reactors/[id]/: +page.svelte
ui/src/routes/simulate/: +page.svelte
ui/src/routes/simulate/[id]/: +page.svelte
ui/src/routes/simulate/live/: +page.svelte
