[package]
name = "reactor-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "numeric", "serde_json", "r2d2"] }
diesel_migrations = "2"
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
r2d2 = "0.8"
async-stream = "0.3"
actix-multipart = "0.7"
futures-util = "0.3"
csv = "1"
